tests/valid/swapexample.cmt
program swapexample
begin
    procedure swap (a: ref(int), b : ref(int))
    begin
        var tmp : int
    in
        tmp := deref(a);
        deref(a) := deref(b);
        deref(b) := tmp
    end;

    procedure main ( )
    begin
        var x : int := 42;
        var y : int := 84;
        var xr : ref (int);
        var yr : ref (int)
    in
        xr := ref(x); 
        yr := ref(y);
        swap (xr, yr)
    end
end
